--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   },
   "homepage": "https://github.com/andreabisello/jest-image-snapshot-example#readme",
   "dependencies": {
-    "jest": "^24.9.0",
-    "jest-image-snapshot": "^2.11.1",
-    "puppeteer": "^2.0.0",
-    "puppeteer-extra": "^3.1.7",
-    "puppeteer-extra-plugin-stealth": "^2.4.5"
+    "jest": "26.0.1",
+    "jest-image-snapshot": "4.0.2",
+    "puppeteer": "3.1.0",
+    "puppeteer-extra": "3.1.9"
   }
 }
