added image comparison ; updated packages ; added dependencies

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "jest": "latest",
     "puppeteer": "latest",
-    "puppeteer-extra": "latest"
+    "puppeteer-extra": "latest",
+    "jest-image-snapshot": "latest"
   }
 }
